// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Component renders alert without title correctly 1`] = `
<DocumentFragment>
  <div
    class="p-4 rounded-md border bg-blue-50 border-blue-300"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <span
          aria-hidden="true"
        >
          ℹ️
        </span>
      </div>
      <div
        class="ml-3"
      >
        <div
          class="mt-1 text-sm text-blue-700"
        >
          This is an info alert without a title.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert Component renders error alert correctly 1`] = `
<DocumentFragment>
  <div
    class="p-4 rounded-md border bg-red-50 border-red-300"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <span
          aria-hidden="true"
        >
          ❌
        </span>
      </div>
      <div
        class="ml-3"
      >
        <h3
          class="text-sm font-medium text-red-800"
        >
          Error Occurred
        </h3>
        <div
          class="mt-1 text-sm text-red-700"
        >
          Something went wrong.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert Component renders info alert correctly 1`] = `
<DocumentFragment>
  <div
    class="p-4 rounded-md border bg-blue-50 border-blue-300"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <span
          aria-hidden="true"
        >
          ℹ️
        </span>
      </div>
      <div
        class="ml-3"
      >
        <h3
          class="text-sm font-medium text-blue-800"
        >
          Information
        </h3>
        <div
          class="mt-1 text-sm text-blue-700"
        >
          This is an info alert.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert Component renders success alert correctly 1`] = `
<DocumentFragment>
  <div
    class="p-4 rounded-md border bg-green-50 border-green-300"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <span
          aria-hidden="true"
        >
          ✅
        </span>
      </div>
      <div
        class="ml-3"
      >
        <h3
          class="text-sm font-medium text-green-800"
        >
          Success!
        </h3>
        <div
          class="mt-1 text-sm text-green-700"
        >
          Operation successful.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert Component renders warning alert correctly 1`] = `
<DocumentFragment>
  <div
    class="p-4 rounded-md border bg-yellow-50 border-yellow-300"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <span
          aria-hidden="true"
        >
          ⚠️
        </span>
      </div>
      <div
        class="ml-3"
      >
        <h3
          class="text-sm font-medium text-yellow-800"
        >
          Warning
        </h3>
        <div
          class="mt-1 text-sm text-yellow-700"
        >
          Please be careful.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert Component renders with additional className 1`] = `
<DocumentFragment>
  <div
    class="p-4 rounded-md border bg-green-50 border-green-300 my-custom-class"
    role="alert"
  >
    <div
      class="flex"
    >
      <div
        class="flex-shrink-0"
      >
        <span
          aria-hidden="true"
        >
          ✅
        </span>
      </div>
      <div
        class="ml-3"
      >
        <div
          class="mt-1 text-sm text-green-700"
        >
          Custom class test.
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
